--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  amplify_flutter: ^0.2.0
   amplify_auth_cognito: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
