--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  monarch: ^1.0.1
+  build_runner: ^1.10.3
 
 flutter:
   uses-material-design: true
