chore: update pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # freezed: ^0.14.5 # conflicts with other packages.
 
   amplify_flutter: ^0.2.0
   amplify_auth_cognito: ^0.2.0
