--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # freezed: ^0.14.5 # conflicts with other packages.
-  flutter_hooks: ^0.18.0
+  freezed: ^0.14.5
   hooks_riverpod: ^1.0.0-dev.9
 
   amplify_flutter: ^0.2.0
@@ -24,7 +23,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   monarch: ^1.0.1
-  build_runner: ^1.10.3
+  build_runner: "^2.0.6"
 
 flutter:
   uses-material-design: true
